<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.kreatimont.smartbusschedule.activity.MainActivity"
    android:padding="16dp">

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/input_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="16dp"
            android:text="@string/title_input"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/start_hint"
                android:id="@+id/editTextFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/end_hint"
                android:id="@+id/editTextTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/button"
            android:background="@drawable/btn"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_send_txt" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:scaleX=".2"
        android:scaleY=".2"
        android:visibility="gone"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
