<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kreatimont.smartbusschedule.activity.DetailedActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:alpha=".80"
                android:background="@color/colorAccent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detailed_from_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textColor="#fff"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="Сиэтл" />

                    <TextView
                        android:id="@+id/detailed_from_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:textColor="#fff"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        tools:text="2011-12-30" />

                </LinearLayout>

                <View
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:background="#fff"
                    android:layout_width="match_parent"
                    android:layout_height="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detailed_to_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textColor="#fff"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:text="Амстердам" />

                    <TextView
                        android:id="@+id/detailed_to_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|start"
                        android:textColor="#fff"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        tools:text="2012-01-12" />

                </LinearLayout>

                <View
                    android:layout_gravity="bottom"
                    android:background="@color/colorAccentDark"
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/detailed_text_from_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/detailed_from_time"
                        android:layout_marginLeft="8dp"
                        tools:text="11:00:00"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/detailed_text_from_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/detailed_from_info"
                        android:layout_marginLeft="8dp"
                        tools:text="По требованию"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/detailed_text_to_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/detailed_to_time"
                        android:layout_marginLeft="8dp"
                        tools:text="14:00:00"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/detailed_text_to_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/detailed_to_info"
                        android:layout_marginLeft="8dp"
                        tools:text="По требованию"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/detailed_text_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/detailed_info"
                        android:layout_marginLeft="8dp"
                        tools:text="Артёмовск - Антрацит"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textStyle="bold"
                        android:text="@string/detailed_text_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/detailed_price"
                        android:layout_marginLeft="8dp"
                        tools:text="400 грн"
                        android:textStyle="italic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
